Move to java 12 and RA 3.1